syntax = "proto3";

package workflowpb;

import "google/protobuf/timestamp.proto";

option go_package = "../outboxpb";

message OutboxRecord {
  int64 foreign_id = 1 [deprecated = true]; // Deprecated for use of run_id
  int32 type = 2;
  map<string, string> headers = 3;
  string run_id = 4;
}
